[package]
name = "wave"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
egui = { version = "0.29.1", features = ["rayon"] }
symphonia = { version = "0.5.4", features = ["all"] }
kira = "0.9.6"
pollster = "0.4.0"
wgpu = "23.0.1"
winit = "0.30.5"
egui-wgpu = "0.29.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
